# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  README.md  spec.yaml
.github/workflows/: general.yaml
configuration/: base.yaml  production.yaml
migrations/: 20210118105945_create_subscriptions_table.sql
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
