[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Darren Meehan <hi@drn.ie>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
# We need the optional `derive` feature to use `serde`'s procedural macros: # `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
# The feature is not enabled by default to avoid pulling in
# unnecessary dependencies for projects that do not need it.
serde = { version = "1", features = ["derive"]}
actix-web = "3.0.0"
actix-rt = "1.1.1"

[dev-dependencies]
reqwest = "0.10"
tokio = "0.2.22"
