[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Darren Meehan <hi@drn.ie>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
# We need the optional `derive` feature to use `serde`'s procedural macros: # `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
# The feature is not enabled by default to avoid pulling in
# unnecessary dependencies for projects that do not need it.
serde = { version = "1", features = ["derive"]}
actix-web = "3.0.0"
actix-rt = "1.1.1"
config = "0.10.1"
env_logger = "0.8.2"
log = "0.4.13"
tracing = "0.1.22"
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.1.7"
tracing-log = "0.1.1"
tracing-actix-web = "0.2.1"
serde-aux = "2.1.1"
unicode-segmentation = "1.7.1"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.4.1"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
reqwest = "0.10"
tokio = "0.2.22"
lazy_static = "1.4.0"
